[project]
name = "learn-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "torch==2.2.0",
    "llama-index>=0.12.17",
    "llama-index-llms-ollama>=0.5.2",
    "qdrant-client>=1.13.2",
    "transformers>=4.48.3",
    "ipykernel>=6.0.0",
    "llama-index-embeddings-huggingface>=0.5.1",
    "llama-index-vector-stores-qdrant>=0.4.3",
]
